# tracked-vehicle-rdk

./: .gitignore  CHANGELOG.md  LICENSE  README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  mlc_config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
ci1302_firmware/: 命令词播报词协议列表V3_中文_瓦力.xlsx  命令词播报词协议列表V3_履带车.xlsx  命令词播报词协议列表V5_瓦力履带车.xlsx  命令词播报词协议列表V6_瓦力履带车.xlsx
ci1302_firmware/sfw20260703092622158195706/: readme.txt
ci1302_firmware/sfw20260722155932158193180/: readme.txt
config/: stereo_calib.yaml
docs/: PROJECT-ARCHITECTURE.md  architecture-b-feasibility-analysis.md  hardware-setup.md  lessons-learned.md  protocol-spec.md  stereo-depth-exploration.md  stereo-vision-verification.md
docs/reference/: gs130w_bpu_display_ref.py  gs130w_x11_display_ref.py
docs/reference/voice_module/: 命令词播报词协议列表V3_中文.xlsx
docs/reference/voice_module/rdkx5_ref/: iic_test.py  uart_test.py
launch/: full_system_tracking.launch.py  motor_bridge.launch.py  person_follow.launch.py  stereo_vision.launch.py
src/tracked_vehicle/: package.xml  setup.cfg  setup.py
src/tracked_vehicle/scripts/: camera_info_repub.py
src/tracked_vehicle/tracked_vehicle/: __init__.py  cmd_vel_bridge.py  display_node.py  lidar_fusion.py  motion_arbiter.py  motor_bridge.py  perception_node.py  person_tracker.py  voice_bridge.py
stm32_firmware/: flash_stm32.sh  platformio.ini
stm32_firmware/src/: config.h  main.cpp
