<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tracked_vehicle</name>
  <version>0.3.0</version>
  <description>6WD heavy tracked vehicle — RDK X5 autonomous follower (ROS2 Humble + TROS)</description>
  <maintainer email="sunrise@rdkx5.local">sunrise</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>ai_msgs</depend>
  <depend>python3-serial</depend>

  <test_depend>ament_flake8</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
